kubernetes-flux/mini/backup/seaweedfs/app/service.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json

apiVersion: v1
kind: Service
metadata:
  name: seaweedfs-tailscale
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "s3-mini"
    tailscale.com/tags: "tag:s3-mini"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/component: seaweedfs-all-in-one
    app.kubernetes.io/name: seaweedfs
  ports:
    - name: swfs-s3
      port: 8333
      protocol: TCP
      targetPort: 8333
